1.1.17-beta
- Update Free Space checker logic.
- Add context menu on Update History.
- Add DB (SDCard) Access Check logic on Main Activity.
- Fix unhandled exception on AsyncTaskResult, Util.formatDateForDisplay().
- Replace Ignore Cert with Use App Keystore so it will validate the cert.
- Fix Original Novel parser.

1.1.16
- Implement quick load on Watched Novels.
- Update parser to handle Special: pages.
- Update handler for keep awake on novel contents.
- Update https handler.
- Update alternate language parser (freedomofkeima).

1.1.15
- Differentiate between Missing chapter (Red) with relink=1 chapter (Pink).
- New Feature for maintenance.
  - Find and Delete Missing Chapter
  - Find and Delete Redlink Chapter
  - Find and Delete Empty Book
  - Find and Delete Empty Novel
- New option to parse redlink chapter.
- New option to ignore certificate error.
- Add MHTML support for saving External Url on Android 4.3 and up.
- Add option to clean up the temp used for MHTML.
- Externalize alternate language parser info.
- Optimize Bookmark loading.
- Add option to decrease Novel loading time by skipping updated detection => (!) icon.

1.1.14
- Fix Chapter parser.
- Optimize Main Novel list parsing.
- Fix Run Update status notifier on Settings activity when orientation changed
- Add option menu to run update from Update History activity.

1.1.13-Merry-Christmas:
- Update parser to handle ToAru Index.
- Update immersive mode for KitKat (liyhcharles).
- Add check DB (Tap DB Save Location).
- Add daily AutoBackup DB with rolling backup support (default is 4).
- Add option to define DB backup location
- Enhace DB restore: allow to choose backup version.
- Update Settings Screen.
- Update free space check for backup.
- Fix null pointer exception on Setting when updating.

1.1.12:
- Fix External Page Refresh.
- Reorganize Preferences screen.
- Update backup and restore to include all images, controlled by flag.
- Update relink image to process all images.