@@ -131,7 +131,7 @@ public class Constants {
 	public static final int COLOR_EXTERNAL = Color.parseColor("#3333ff");
 	public static final int COLOR_REDLINK = Color.parseColor("#ff69b4");;
 
-	public static final String ROOT_NOVEL = "Main_Page";
+	public static final String ROOT_NOVEL_ENGLISH = "Category:Light_novel_(English)";
 	public static final String ROOT_ORIGINAL = "Category:Original_novel";
 	public static final String ROOT_TEASER = "Category:Teasers";
 
